--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
